committing some work

--- a/multipage_website/css/style.css
+++ b/multipage_website/css/style.css
@@ -40,3 +40,12 @@
 .links {
     text-align: center;
 }
+
+.anti-wrap {
+    float: left;
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+}
