--- a/homepage/css/style.css
+++ b/homepage/css/style.css
@@ -1,21 +1,27 @@
-.container {
-    width: 1080px;
-    border: 10px solid purple;
-    margin: 0 auto;
-    background-color: white;
-}
-
-.nav {
-    list-style: none;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
     text-align: center;
-
-}
-
-.nav li {
-    display:inline;
-    margin-right: 20px;
-    font-size:x-large;
-}
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change the link color to #111 (black) on hover */
+  li a:hover {
+    background-color: #111;
+  }
 
 .center {
     text-align: center;
