--- a/css_grid/css/style.css
+++ b/css_grid/css/style.css
@@ -48,16 +48,22 @@ ul.nav li a {
 .main1 {
     grid-column: 1 / span 2;
     grid-row: 3;
+    text-align: center;
 }
 
 .main2 {
-    grid-column: 1 / span 2;
+    grid-column: 1 / span 1;
+    grid-row: 4;
+}
+
+.main3 {
+    grid-column: 2 / span 1;
     grid-row: 4;
 }
 
 .sidenav {
     grid-column: 3;
-    grid-row: 3 / span 2;
+    grid-row: 3 / span 3;
 }
 
 .footer {
