--- a/MA-group-sports/css/style.css
+++ b/MA-group-sports/css/style.css
@@ -7,7 +7,7 @@ ul {
   }
   
   li {
-    float: left;
+    float:left;
   }
   
   li a {
@@ -20,5 +20,5 @@ ul {
   
   /* Change the link color to #111 (black) on hover */
   li a:hover {
-    background-color: #8674aa;
+    background-color: rgb(158, 179, 239);
   }
