--- a/MA-group-sports/css/style.css
+++ b/MA-group-sports/css/style.css
@@ -43,7 +43,7 @@ ul {
     
     .navmenu {
     grid-row: 1;
-    grid-column: 1 / span 10;
+    grid-column: 1;
     }
     
     .main-image {
@@ -73,4 +73,8 @@ ul {
         text-align: center;
         width: 100%;
         background-color: rgb(118, 174, 223);
+    }
+
+    .img{
+      text-align: center;
     }
