--- a/MA-group-sports/css/style.css
+++ b/MA-group-sports/css/style.css
@@ -74,3 +74,15 @@ ul {
         width: 100%;
         background-color: rgb(118, 174, 223);
     }
+  .maina {
+      grid-row:3;
+      grid-column:1;
+  }
+  .mainb {
+      grid-row:3;
+      grid-column:2;
+  }
+  .mainc {
+      grid-row:4;
+      grid-column:1 / span 2;
+  }
