--- a/MA-group-sports/css/style.css
+++ b/MA-group-sports/css/style.css
@@ -78,3 +78,8 @@ ul {
     .img{
       text-align: center;
     }
+
+    .body {
+      font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      text-align: center;
+    }
