--- a/MA-group-sports/css/style.css
+++ b/MA-group-sports/css/style.css
@@ -1,4 +1,11 @@
+body {
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  text-align: center;
+background-color: #3a368d;
+border-color: #869cff;
+border-style: solid;
 
+}
 
 ul {
     list-style-type: none;
@@ -24,9 +31,6 @@ ul {
   li a:hover {
     background-color: #8a95c6;
   }
-
-
-    
     
     .grid-container {
     display: grid;
@@ -42,8 +46,8 @@ ul {
     }
     
     .navmenu {
-    grid-row: 1;
-    grid-column: 1;
+    grid-row: 1 / spam 3;
+    grid-column: 1 ;
     }
     
     .main-image {
@@ -51,7 +55,7 @@ ul {
     grid-row: 2;
     }
     
-    .main1 {
+    .main1 { 
         grid-column: 1 / span 2;
     grid-row: 3;
     }
