--- a/MA-group-sports/css/style.css
+++ b/MA-group-sports/css/style.css
@@ -1,9 +1,9 @@
 body {
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
-background-color: #3a368d;
+background-image: linear-gradient(rgb(91, 166, 235), rgb(34, 39, 128)); /* I learned how to create a gradient backround - Sabina*/
 border-color: #869cff;
-border-style: solid;
+border-style: solid; /* I learned how to create a border and find a border style - Sabina */
 
 }
 
