--- a/MA-group-sports/css/style.css
+++ b/MA-group-sports/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
-background-color: #3a368d;
+background-image: linear-gradient(rgb(145, 160, 248),rgb(56, 38, 121));
 border-color: #869cff;
 border-style: solid;
 
