--- a/sivbc_remake/css/style.css
+++ b/sivbc_remake/css/style.css
@@ -1,3 +1,53 @@
 body {
     background-color: rgb(250, 242, 229);
 }
+
+.grid-container {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: auto auto 25%;
+    font-family:'Segoe UI', Tahoma, Verdana, sans-serif;
+}
+
+.grid-item {
+    border-color: rgb(175, 27, 45);
+    background-color: rgb(251, 195, 201);
+    border-width: 5px;
+    border-style: solid;
+    padding:20px;
+    text-align: center;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color: #111;
+  }
+
+.contact-info {
+    grid-row: 2;
+    grid-column: 1 / span 2;
+}
+
+.announce {
+    grid-row: 2;
+    grid-column: 3 / span 2;
+}
