--- a/sivbc_remake/css/style.css
+++ b/sivbc_remake/css/style.css
@@ -11,7 +11,6 @@ body {
 
 .grid-item {
     border-color: rgb(175, 27, 45);
-    background-color: rgb(251, 195, 201);
     border-width: 5px;
     border-style: solid;
     padding:20px;
@@ -51,3 +50,24 @@ ul {
     grid-row: 2;
     grid-column: 3 / span 2;
 }
+
+h2 {
+    text-align: center;
+    color: rgb(103, 11, 11);
+}
+
+.privates {
+    grid-row: 3;
+    grid-column: 1;
+}
+
+.fprograms {
+    grid-row: 3;
+    grid-column: 2;
+}
+
+.tryouts {
+    grid-row: 3;
+    grid-column: 3 / span 2;
+}
+
