--- a/sivbc_remake/css/style.css
+++ b/sivbc_remake/css/style.css
@@ -20,17 +20,18 @@ body {
 ul {
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding: 10px;
     overflow: hidden;
     background-color: #333;
+    text-align: center;
+  }
+
+  li {
+    display: inline-block;
   }
   
-  li {
-    float: left;
-  }
   
   li a {
-    display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
