--- a/sivbc_remake/css/style.css
+++ b/sivbc_remake/css/style.css
@@ -72,3 +72,18 @@ h2 {
     grid-column: 3 / span 2;
 }
 
+.why {
+    grid-row: 2;
+    grid-column: 1 / span 4;
+}
+
+.mission {
+    grid-row: 3;
+    grid-column: 1 / span 4;
+}
+
+.cphil {
+    grid-row: 3;
+    grid-row: 2 / span 3;
+}
+
