--- a/sivbc_remake/css/style.css
+++ b/sivbc_remake/css/style.css
@@ -87,3 +87,17 @@ h2 {
     grid-row: 2 / span 3;
 }
 
+.one {
+    grid-row: 4;
+    grid-column: 1;
+}
+
+.two {
+    grid-row: 4;
+    grid-column: 2;
+}
+
+.three {
+    grid-row: 5;
+    grid-column: 1;
+}
