--- a/sivbc_remake/css/style.css
+++ b/sivbc_remake/css/style.css
@@ -101,3 +101,48 @@ h2 {
     grid-row: 5;
     grid-column: 1;
 }
+
+.four {
+    grid-row: 5;
+    grid-column: 2;
+}
+
+.five {
+    grid-row: 6;
+    grid-column: 1;
+}
+
+.six {
+    grid-row: 6;
+    grid-column: 2;
+}
+
+.seven {
+    grid-row: 7;
+    grid-column: 1;
+}
+
+.eight {
+    grid-row: 7;
+    grid-column: 2;
+}
+
+.nine {
+    grid-row: 8;
+    grid-column: 1;
+}
+
+.ten {
+    grid-row: 8;
+    grid-column: 2;
+}
+
+.eleven {
+    grid-row: 9;
+    grid-column: 1;
+}
+
+.twelve {
+    grid-row: 9;
+    grid-column: 2;
+}
