--- a/sivbc_remake/css/style.css
+++ b/sivbc_remake/css/style.css
@@ -146,3 +146,109 @@ h2 {
     grid-row: 9;
     grid-column: 2;
 }
+
+.alum-one {
+    grid-row: 3;
+    grid-column: 1;
+    height:500px;
+}
+
+.alum-two {
+    grid-row: 3;
+    grid-column: 2;
+}
+
+.alum-three {
+    grid-row: 4;
+    grid-column: 1;
+}
+
+.alum-four {
+    grid-row: 4;
+    grid-column: 2;
+}
+
+.alum-five {
+    grid-row: 5;
+    grid-column: 1;
+}
+
+.alum-six {
+    grid-row: 5;
+    grid-column: 2;
+}
+
+.alum-seven {
+    grid-row: 6;
+    grid-column: 1;
+}
+
+.alum-eight {
+    grid-row: 6;
+    grid-column: 2;
+}
+
+.alum-nine {
+    grid-row: 7;
+    grid-column: 1;
+}
+
+.alum-ten {
+    grid-row: 7;
+    grid-column: 2;
+}
+
+.alum-eleven {
+    grid-row: 8;
+    grid-column: 1;
+}
+
+.alum-twelve {
+    grid-row: 8;
+    grid-column: 2;
+}
+
+.alum-thirteen {
+    grid-row: 9;
+    grid-column: 1;
+}
+
+.alum-fourteen {
+    grid-row: 9;
+    grid-column: 2;
+}
+
+.alum-fifteen {
+    grid-row: 10;
+    grid-column: 1;
+}
+
+.reason-paragraph {
+    grid-row: 2;
+    grid-column: 1 / span 4;
+}
+
+.purpose {
+    grid-row: 3;
+    grid-column: 1 / span 2;
+}
+
+.elig {
+    grid-row: 3;
+    grid-column: 3 / span 2;
+}
+
+.deadline {
+    grid-row: 4;
+    grid-column: 1 / span 2;
+}
+
+.criteria {
+    grid-row: 4;
+    grid-column: 3 / span 2;
+}
+
+.applic {
+    grid-row: 5;
+    grid-column: 1 / span 4;
+}
